...
    return Card(
      child: Padding(
        padding: const EdgeInsets.all(16),
        child: Column(
          crossAxisAlignment: CrossAxisAlignment.start,
          children: [
            Text('Policy Settings',
                style: Theme.of(context).textTheme.titleLarge),
            const Gap(16),
            InputDecorator(
              decoration: const InputDecoration(
                  labelText: 'Policy Mode', border: OutlineInputBorder()),
              child: DropdownButtonHideUnderline(
...
